--- a/src/Styles/biyipage.css
+++ b/src/Styles/biyipage.css
@@ -1,3 +1,4 @@
+
 div.meet-biyi{
     display: flex;
     position: relative;
@@ -6,27 +7,89 @@ div.meet-biyi{
     justify-content: center;
     /* align-items: center; */
     color: var(--primary-color-2);
-    margin: 0 9.375rem;
+    margin: 0 60px;
     padding-block-start: 12.5rem;
-    padding-block-end: 250px;
-    margin-bottom: 80px;
+    margin-bottom: 135px;
 }
+@media screen and (max-width: 1200px) {
+    div.meet-biyi{
+        margin: 0  30px;
+        gap:20px;
+        padding-block-start: 12.5rem;
+        margin-bottom: 135px;
+    }
+}
+
+@media screen and (max-width:1024px) {
+    div.meet-biyi{
+        gap: 15px;
+        color: var(--primary-color-2);
+        margin: 0  15px;
+        padding-block-start: 12.5rem;
+        margin-bottom: 100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    div.meet-biyi {
+    gap: 15px;
+    color: var(--primary-color-2);
+    margin: 0 0px;
+    padding-block-start: 109px;
+    margin-bottom: 0px;
+    padding-block-end: 150px;
+    height: auto;
+}
+}
+
 div.learnmore{
     position: absolute;
-    bottom: 0%;
-    left: 50%;
+    bottom: 5%;
+    left: 75%;
     transform: translateX(-50%);
-    width: 113px;
-    height: 113px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
-    border: 2px solid #fff;
-    color: #FFF;
+    gap:10px;
 }
 
-div.learnmore::after{
+@media screen and (max-width:768px) {
+    div.learnmore{
+        position: absolute;
+        bottom: 7%;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap:10px;
+    }   
+}
+div.learnmore > span{
+    white-space: nowrap;
+    color: #E4BB89;
+    font-size: 20px;
+    font-weight: 600;
+    transition: all ease 0.5s;
+}
+/* div.learnmore > img{
+    transform: all 0.5s ease;
+} */
+div.learnmore:hover > span{
+    color: #FFF;
+}
+div.learnmore:hover > svg > path{
+    fill: #FFF;
+}
+div.learnmore:hover > svg{
+    animation: rotateImg 0.5s linear 1 forwards;
+    transform: rotate(0deg);
+}
+
+@keyframes rotateImg {
+    to{
+        transform: rotate(-180deg);
+    }    
+}
+/* div.learnmore::after{
     content: "learn more";
     color: #000;
     position: absolute;
@@ -44,27 +107,7 @@ div.learnmore::after{
 }
 div.learnmore:hover::after{
     transform: translateX(-50%) translateY(-50%) scale(1);
-}
-@media screen and (max-width: 1024px) {
-    div.meet-biyi{
-        margin: 0 4.6875rem;
-        padding-block-end: 150px;
-    }
-}
-
-@media screen and (max-width:768px) {
-    div.meet-biyi{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: var(--primary-color-2);
-        margin: 0  0rem;
-        padding-block-start: 11.75rem;
-        padding-block-end: 100px;
-        height: 900px;
-    }
-}
-
+} */
 /* @media screen and (max-width:425px) {
     div.meet-biyi{
         height: 25rem;
@@ -108,7 +151,7 @@ div.meet-biyi-01 > img.mobile-image{
     div.meet-biyi-01{
         position: absolute;
         z-index: 1;
-        height: 90%;
+        height: 100%;
     }
     /* div.meet-biyi-01{
         height: 100%;
@@ -116,56 +159,87 @@ div.meet-biyi-01 > img.mobile-image{
 }
 div.meet-biyi-02{
     flex: 1;
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
+
+@media screen and (max-width: 768px){
+    div.meet-biyi-02{
+        padding-block-start: 60px;
+        padding-inline: 60px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
 div.meet-biyi-02 > p{
-    font-size: var(--font-16);
+    color: #FFF;;
+    font-size: 20px;
     font-weight: 400;
+    margin-bottom: 36px;
+}
+div.meet-biyi-02 > p:last-child{
+    margin-bottom: 18px;
+}   
+@media screen and (max-width: 1200px) {
+    div.meet-biyi-02 > p{
+        font-size: 18px;
+        margin-bottom: 36px;
+    }
+    div.meet-biyi-02 > p:last-child{
+        margin-bottom: 18px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    div.meet-biyi-02 > p{
+        font-size: 16px;
+        margin-bottom: 30px;
+    }
+    div.meet-biyi-02 > p:last-child{
+        margin-bottom: 15px;
+    }
 }
 @media screen and (max-width: 768px) {
-    div.meet-biyi-02{
-        flex: 1;
-        gap: 0.5rem;
-        padding-inline: 70px;
-        /* margin-bottom: 0.75rem; */
-    }
     div.meet-biyi-02 > p{
-        font-size: var(--font-14);
-        font-weight: 400;
+        font-size: 20px;
+        margin-bottom: 36px;
     }
-}
-@media screen and (max-width:425px){
-    div.meet-biyi-02{
-        position: relative;
-        z-index: 2;
-        gap: 0.75rem;
-        margin-bottom: 0rem;
-        justify-content: start;
-    }
-    div.meet-biyi-02 > p{
-        font-size: .625rem;
-        font-weight: 400;
+    div.meet-biyi-02 > p:last-child{
+        margin-bottom: 18px;
     }
 }
 div.services-container{
     display: flex;
     flex-direction: row;
-    gap:1%;
+    gap:30px;
+    flex-wrap: wrap;
     justify-content: center;
     color: var(--primary-color-1);
+    margin-top: 120px;
     margin-bottom: 200px;
 }
+
+@media screen and (max-width:768px) {
+    div.services-container{
+        flex-wrap: nowrap;
+        justify-content: start;
+        padding-inline: 20px;
+    }
+
+    .react-slideshow-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        margin-top: 200px;
+    }
+}
 div.services-container > div{
-    width: 32%;
+        position: relative;
+        flex-shrink: 0;
     position: relative;
 }
 
-div.services-container > div:nth-of-type(2){
-    bottom: 70px;
-}
 div.services-container > div > img{
     width: 100%;
     display: block;
@@ -180,6 +254,7 @@ p.text{
     color: #fff;
 }
 div.hover-div{
+    border: 1px solid #E4BB89;
     position:absolute;
     display: flex;
     flex-direction: column;
@@ -191,27 +266,60 @@ div.hover-div{
     overflow: hidden;
     visibility: hidden
 }
+img.top-image{
+    position: absolute;
+    top:10%;
+    left:10%;
+}
+img.bottom-image{
+    position: absolute;
+    bottom:10%;
+    right:10%;
+}
 div.hover-div > p{
     color: var(--primary-color-2);
     font-size: var(--font-24);
-    margin-block-end: 2.25rem;
+    /* margin-block-end: 2.25rem; */
     font-weight: 600;
 }
 div.hover-div > div{
-    width: 5rem;
-    height: 5rem;
-    border-radius: 50%;
-    border: 1px solid var(--primary-color-2);
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    color: #FFF;
+    gap: 10px;
+    margin-top: 20px;
+    color: #E4BB89;
     font-size: var(--font-14);
     font-style: normal;
     font-weight: 600;
     transition: all ease 0.5s;
 }
+div.hover-div > div > span{
+    font-size: 24px;
+}
+div.hover-div > div:hover{
+    color:#FFF;
+}
+div.hover-div > div > svg > path, div.hover-div > div > svg{
+    transition: all ease 0.5s;
+}
+
+div.hover-div > div:hover > svg{
+    transform: rotate(-180deg);
+}
+div.hover-div > div:hover > svg > path{
+    fill: #fff
+}
+
+div.swiper-wrapper > div:hover div.hover-div{
+    animation: moveUp2 0.5s ease  1 forwards;
+    background-color: var(--primary-color-1);
+    color: var(--primary-color-2);
+    height: 0;
+    overflow: hidden;
+    visibility: visible;
+}
+
 div.services-container > div:hover div.hover-div{
     animation: moveUp2 0.5s ease  1 forwards;
     background-color: var(--primary-color-1);
@@ -235,38 +343,25 @@ div.services-container > div:hover div.hover-div{
         transform: translateX(-50%);
         color: #fff;
     }
-    div.services-container > div:nth-of-type(2){
-        bottom: 40px;
-    }   
 }
 
-@media screen and (max-width: 768px){
-    div.services-container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        color: var(--primary-color-1);
-        margin-block-start: 6rem;
+
+@media screen and (max-width:768px) {
+    .swiper{
+        margin-top: 120px;
     }
-    div.services-container > div{
+    .swiper-wrapper{
+        text-align: center;
+    }
+    .swiper-slide > img{
+        width:85%;
+    }
+    /* .hover-div > img{
         width: 90%;
-        position: relative;
-    }
-    
-    div.services-container > div:nth-of-type(2){
-        bottom: 0;
-    }
-    div.services-container > div > img{
-        width: 100%;
-        display: block;
-    }
-    p.text{
-        position: absolute;
-        left: 50%;
-        bottom: 10%;
-        font-size: 48px;
+    } */
+    div.hover-div{
+        width:85%;
+        left:50%;
         transform: translateX(-50%);
-        color: #fff;
     }
 }
