--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -1,8 +1,12 @@
+div.footer{
+    background-color: #000;
+}
 div.footer-container{
     display: none;
 }
 div.mobile-footer-container{
     display: block;
+    background-color: #000;
     transform: translateY(100%);
     visibility: hidden;
 }
@@ -20,14 +24,6 @@ div.mobile-footer-container.scrollTo{
     }
 }
 
-
-div.footer-img{
-    width: 100%;
-    height: 2.0rem;
-    background-image: url("../assets/Homepage/Footer\ Stripes_Biyi\ Aroloye.png");
-    background-position: center;
-    background-repeat: no-repeat;
-}   
 div.mobile-footer-container > ul{
     display: flex;
     flex-direction: row;
@@ -36,6 +32,7 @@ div.mobile-footer-container > ul{
     padding-block: .625rem;
     /* background-color: var(--primary-color-2); */
     list-style: none;
+    transform: translateY(50%);
     margin-block-end: 5.875rem;
 }
 div.mobile-footer-container > ul > li{
@@ -93,11 +90,26 @@ div.mobile-footer-container > div > p > span{
     div.footer-container{
         margin: 0 4rem;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         padding-block: .5rem;
         transform: translateY(100%);
         visibility: hidden;
+        margin-bottom: 32px;
+    }
+    div.footer-footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        padding-block: 18px;
+    }
+    div.footer-div-3{
+        position: absolute;
+        top:50%;
+        transform: translateY(-50%);
+        right:5%;
     }
     div.footer-container.scrollTo{
         animation: movingFooter 1s ease 1 forwards;
@@ -181,13 +193,6 @@ div.mobile-footer-container > div > p > span{
         font-size:var(--font-14);
         font-weight: 400;
     }
-    div.footer-img{
-        width: 100%;
-        height: 2.0rem;
-        background-image: url("../assets/Homepage/Footer\ Stripes_Biyi\ Aroloye.png");
-        background-position: center;
-        background-repeat: no-repeat;
-    }    
 }
 @media screen and (min-width: 1024px) {
 
@@ -197,7 +202,7 @@ div.mobile-footer-container > div > p > span{
     div.footer-container{
         margin: 0 4rem;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         padding-block: .75rem;
     }
@@ -268,12 +273,5 @@ div.mobile-footer-container > div > p > span{
         color: #747474;
         font-size:var(--font-16);
         font-weight: 400;
-    }
-    div.footer-img{
-        width: 100%;
-        height: 2.5rem;
-        background-image: url("../assets/Homepage/Footer\ Stripes_Biyi\ Aroloye.png");
-        background-position: center;
-        background-repeat: no-repeat;
     }
 }
