--- a/src/Styles/biyipage.css
+++ b/src/Styles/biyipage.css
@@ -51,12 +51,16 @@ div.learnmore{
     justify-content: center;
     align-items: center;
     gap:10px;
+    cursor: pointer;
 }
+
 
 @media screen and (max-width:768px) {
     div.learnmore{
         position: absolute;
-        bottom: 7%;
+        bottom: 0%;
+        z-index: 2;
+        cursor: pointer;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
@@ -168,6 +172,8 @@ div.meet-biyi-02{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        position: relative;
+        z-index: 2;
     }
 }
 
@@ -208,6 +214,17 @@ div.meet-biyi-02 > p:last-child{
         margin-bottom: 18px;
     }
 }
+
+@media screen and (max-width: 425px) {
+    div.meet-biyi-02 > p{
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+    div.meet-biyi-02 > p:last-child{
+        margin-bottom: 15px;
+    }
+}
+
 div.services-container{
     display: flex;
     flex-direction: row;
