--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -4,6 +4,9 @@ div.footer{
 div.footer-container{
     display: none;
 }
+div.footer-footer{
+    display: none;
+}
 div.mobile-footer-container{
     display: block;
     background-color: #000;
@@ -55,13 +58,14 @@ div.mobile-footer-container > div{
     color: #9B9B9B;
     padding-block: 0.5rem;
     padding-inline-end: 1.5rem;
-    margin-block-end: 0.75rem;
+    padding-block-end: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 div.mobile-footer-container > div > p{
-    position: absolute;
-    left:50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
     color: #9B9B9B;
     font-family: better-yesterday;
     font-size: var(--font-16);
@@ -70,13 +74,26 @@ div.mobile-footer-container > div > p{
 div.mobile-footer-container > div > p > span{
     font-family: 'Poppins', sans-serif;
 }
- div.footer-div-3{
+div.footer-div-5{
+    display: flex;
+    gap: .5rem;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+div.footer-div-5 > p{
+    color: #747474;
+    font-size:var(--font-14);
+    font-weight: 400;
+}
+ /* div.footer-div-3{
     display: flex;
     flex-direction: row;
     justify-content: end;
     gap: 0.5rem;
     text-align: end;
-}
+} */
+
 @media screen and (min-width: 768px) {
     div.mobile-footer-container{
         display: none;
@@ -98,6 +115,7 @@ div.mobile-footer-container > div > p > span{
         margin-bottom: 32px;
     }
     div.footer-footer{
+        background-color: #000;
         display: flex;
         flex-direction: row;
         justify-content: center;
