--- a/src/Styles/letstalkpage.css
+++ b/src/Styles/letstalkpage.css
@@ -42,6 +42,7 @@ div.socials-container{
     transition: all ease 0.5s;
 }
 div.socials-container svg{
+    transition: all ease 0.5s;
     cursor: pointer;
 }
 div.socials-container svg:hover{
