--- a/src/Styles/letstalk3.css
+++ b/src/Styles/letstalk3.css
@@ -12,7 +12,8 @@ div.typewriter3 > p{
     font-size: 1.5rem;
     width:335px;
     margin: 0 auto;
-    color: #FFD700;
+    color: #E4BB89;
+    font-weight: 500;
     overflow: hidden;
     white-space: nowrap;
     animation: typewriter3 1s steps(30) 1;
@@ -68,6 +69,10 @@ div.lettalk3 > textarea{
     transform: translateY(100%);
     visibility: hidden;
     animation: textarea23 1s ease 1s 1 forwards;
+}
+
+div.lettalk3 > textarea:focus{
+    outline: none
 }
 
 @keyframes textarea23 {
