--- a/src/Styles/biyipage.css
+++ b/src/Styles/biyipage.css
@@ -1,4 +1,3 @@
-
 div.meet-biyi{
     display: flex;
     position: relative;
@@ -125,7 +124,10 @@ div.learnmore:hover::after{
 } */
 div.meet-biyi-01{
     flex: 1;
+    transition: all ease 0.5s;
 }
+
+
 @media screen and (max-width: 768px) {
     div.meet-biyi-01{
         width: 100%;
@@ -186,20 +188,30 @@ div.meet-biyi-02 > p{
 div.meet-biyi-02 > p:last-child{
     margin-bottom: 18px;
 }   
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1201px) {
     div.meet-biyi-02 > p{
         font-size: 18px;
-        margin-bottom: 36px;
+        margin-bottom: 30px;
     }
     div.meet-biyi-02 > p:last-child{
         margin-bottom: 18px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1026px) {
     div.meet-biyi-02 > p{
-        font-size: 16px;
-        margin-bottom: 30px;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    div.meet-biyi-02 > p:last-child{
+        margin-bottom: 15px;
+    }
+}
+
+@media screen and (max-width: 851px) {
+    div.meet-biyi-02 > p{
+        font-size: 13px;
+        margin-bottom: 15px;
     }
     div.meet-biyi-02 > p:last-child{
         margin-bottom: 15px;
@@ -281,7 +293,8 @@ div.hover-div{
     bottom: 0;
     left: 0;
     overflow: hidden;
-    visibility: hidden
+    height: 0;
+    visibility: hidden;
 }
 img.top-image{
     position: absolute;
@@ -333,16 +346,14 @@ div.swiper-wrapper > div:hover div.hover-div{
     animation: moveUp2 0.5s ease  1 forwards;
     background-color: var(--primary-color-1);
     color: var(--primary-color-2);
-    height: 0;
     overflow: hidden;
-    visibility: visible;
+    visibility: visible
 }
 
 div.services-container > div:hover div.hover-div{
     animation: moveUp2 0.5s ease  1 forwards;
     background-color: var(--primary-color-1);
     color: var(--primary-color-2);
-    height: 0;
     overflow: hidden;
     visibility: visible;
 }
@@ -381,5 +392,31 @@ div.services-container > div:hover div.hover-div{
         width:85%;
         left:50%;
         transform: translateX(-50%);
+    }
+}
+
+div.meet-biyi-01{
+    transform: translateX(-110%);
+    transition: all ease 0.5s;
+    transition-delay: 0.5s;
+}
+div.meet-biyi-02{
+    transform: translateX(110%);
+    transition: all ease 0.5s;
+    transition-delay: 0.5s;
+}
+
+div.meet-biyi.scrollTo > div.meet-biyi-01,
+div.meet-biyi.scrollTo > div.meet-biyi-02{
+    transform: translateX(0%);
+}
+
+@media screen and (min-width: 768px) {
+    div.services-container > div{
+        transform: scale(0);
+        transition: all ease 0.5s;
+    }
+    div.services-container.scrollTo > div{
+        transform: scale(1);
     }
 }
