--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -161,6 +161,7 @@ div.mobile-container > div.cancel{
         content: '';
         height: 3.75rem;
         width: 3.75rem;
+        line-height: 12px;
         overflow: hidden;
         background-color: var(--primary-color-2);
         position: absolute;
@@ -225,7 +226,7 @@ div.mobile-container > div.cancel{
         justify-content: center;
         align-items: center;
         font-size:var(--font-14);
-        font-weight: 600;
+        line-height: 12px;
         border-radius: 50%;
         border: 1px solid #fff;
         cursor: pointer;
@@ -313,6 +314,7 @@ div.mobile-container > div.cancel{
         justify-content: center;
         align-items: center;
         transition: all ease 0.5s;
+        line-height: 16px;
     }
     div.navbar-links > div.links:nth-of-type(1):hover::after{
         content: 'Meet Biyi';
@@ -351,6 +353,7 @@ div.mobile-container > div.cancel{
     div.chat{
         position: absolute;
         top: 1.875rem;
+        line-height: 16px;
         right: 3.75rem;
         height: 5.25rem;
         width: 5.25rem;
