--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -52,7 +52,7 @@ div.homepg-biyi-cta{
     background-color: transparent;
     color: #fff;
     margin: 67.25px auto 0 auto;
-    border: 2px solid #fff;
+    border: 1px solid #E4BB89;;
     text-align: center;
     font-family: Poppins;
     font-size: 1.25rem;
@@ -106,6 +106,7 @@ div.homepg-mission > div{
     top: 0;
     background: #000;
     padding: 0.5rem;
+    padding-block: 0.75rem;
     border-radius: 0px 0px 0.25rem 0.25rem;
     color: #FFF;
     text-align: center;
@@ -365,7 +366,7 @@ div.homepg-biyi-cta{
     background-color: transparent;
     color: #fff;
     margin: 67.25px auto 0 auto;
-    border: 2px solid #fff;
+    border: 1px solid #E4BB89;;
     text-align: center;
     font-family: Poppins;
     font-size: 1.25rem;
@@ -429,6 +430,7 @@ div.homepg-mission > div{
     top: 0;
     background: #000;
     padding: 0.5rem;
+    padding-block: 2rem;
     border-radius: 0px 0px 0.25rem 0.25rem;
     color: #FFF;
     text-align: center;
@@ -566,7 +568,7 @@ div.homepg-biyi-cta{
     background-color: transparent;
     color: #fff;
     margin: 67.25px auto 0 auto;
-    border: 2px solid #fff;
+    border: 1px solid #E4BB89;;
     text-align: center;
     font-family: Poppins;
     font-size: 1.25rem;
@@ -604,6 +606,7 @@ div.homepg-mission > div{
     top: 0;
     background: #000;
     padding: 0.5rem;
+    padding-block: 2rem;
     border-radius: 0px 0px 0.25rem 0.25rem;
     color: #FFF;
     text-align: center;
