--- a/src/Styles/letstalk1.css
+++ b/src/Styles/letstalk1.css
@@ -94,6 +94,7 @@ div.lettalk1 >select{
     margin: 0 auto;
     max-width: 17.375rem;
     width: 60%;
+    appearance: none;
     padding: 1rem 0 1rem 1rem;
     font-size: .875rem;
     border-radius: .375rem;
