--- a/src/Styles/services.css
+++ b/src/Styles/services.css
@@ -12,6 +12,7 @@ div.services-container.moved{
     padding-block-start: 1.75rem;
     grid-template-columns: repeat(3, minmax(150px, 1fr));
     z-index: 10;
+    gap:3.125rem;
     transition: all ease 0.5s;
 }
 div.services-container{
@@ -42,14 +43,14 @@ div.services-container > div > div:nth-of-type(1){
     gap: .5rem;
     margin-block-end: 1.75rem;
 }
-div.services-container > div > div:nth-of-type(2) > input{
+div.services-container > div > div:nth-of-type(2)  input{
     width: 1.1875rem;
     height: 1.1875rem;
     border: 1px solid #000;
     margin-inline: .5rem;
     margin-block-end: 1rem;
 }
-div.services-container > div > div:nth-of-type(2) > label{
+div.services-container > div > div:nth-of-type(2)  label{
     color: #000;
     font-size: 1rem;
     font-weight: 400;
@@ -102,5 +103,9 @@ div.consulting-container-body > div > label{
         padding-inline: 4rem;
         padding-block-start: 1.75rem;
         grid-template-columns:  1fr;
+    }
+
+    div.services-container > div > div:nth-of-type(1) {
+        align-items: start; 
     }
 }
